Resolves: tdf#104875 defer filter detection to first load/update of external

This is a combination of 2 commits.

This could never have been meant

Since commit 67b374980f340faa2695001984aaf98886a32fad
executing ScDocumentLoader::GetFilterName() twice if there was no stored
filter, and still executing it if there was one, even if the comment says we
shouldn't.

(cherry picked from commit 1bc793f8ab8f9b4ce435bd3585f9579df4a11819)

Resolves: tdf#104875 defer filter detection to first load/update of external

Attempting to access all linked external documents right on load time was
specifically nasty for non-local URIs (unmounted smb, http, ...)

(cherry picked from commit 416752b9e4bc4605c479d3eff7797be9f0ef2a38)

f4a7414dfe36875b505c73b8c963b650eeffe204

Change-Id: Iaf4b88e63b3987fb661df0e9b095f06b29076894